<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_remote_control"
            android:icon="@drawable/img_remote_control"
            android:title="@string/remote_control" />
        <item
            android:id="@+id/nav_navigation_map"
            android:icon="@drawable/img_nav_map"
            android:title="@string/navigation_map" />
        <item
            android:id="@+id/nav_vehicle_status"
            android:icon="@drawable/img_vehicle_status"
            android:title="@string/vehicle_status" />
        <item
            android:id="@+id/nav_system_configuration"
            android:icon="@drawable/img_config"
            android:title="@string/configuration" />
    </group>
</menu>
