<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/img_view_suresoftBI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_suresoft_bi"
        android:layout_gravity="center"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/txt_view_suresoft_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:text="@string/suresoft_web"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/input_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address_hint"/>
    <EditText
        android:id="@+id/input_ip_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port_hint"/>
    <EditText
        android:id="@+id/input_vin_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vin_number_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="183dp"
            android:layout_marginTop="0dp"
            android:text="@string/btn_connect" />

        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@id/btn_connect"
            android:text="@string/btn_clear" />

    </RelativeLayout>
</LinearLayout>